Add minimum 3 chars rule to search box

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -18,7 +18,7 @@
         </div>
         <div id="searchArea" class="searchArea">
             <span class="title">Search:</span>
-            <input type="text" id="searchTxt"  disabled keyup="SearchWord()"/>
+            <input type="text" id="searchTxt" class="searchTxt" disabled keyup="SearchWord()" placeholder="Please type a minimum 3 letters"/>
         </div>
         <div id="searchResults" class="searchResults">
             <div class="title">Search Results: </div>
